Use -stdlib=libc++ to fix 'no member named 'gets' in the global namespace'

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,8 @@ env:
   - CXX=clang-3.6
 addons:
   apt:
-    sources:
-      - llvm-toolchain-precise-3.6
     packages:
-      - clang-3.6
+      - clang++-3.6
 script:
   - make
   - make -j
