--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,10 @@
-sudo: required
-dist: trusty
-compiler: clang-3.6
 env:
-  - CXX=clang-3.6
+  - CC=clang++-3.6
+  - CXX=clang++-3.6
 addons:
   apt:
     packages:
-      - clang++-3.6
+      - clang-3.6
 script:
   - make
   - make -j
