--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
+sudo: required
+dist: trusty
 env:
-  - CC=clang++-3.6 CXX=clang++-3.6
+  - CXX=clang++-3.6 CC=clang++3.6
 addons:
   apt:
     packages:
