--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
-sudo: required
-dist: trusty
 env:
-  - CXX=clang++-3.6 CC=clang++3.6
+  - CXX=clang++-3.6
 addons:
   apt:
+    sources:
+      - llvm-toolchain-precise-3.6
+      - ubuntu-toolchain-r-test
     packages:
       - clang-3.6
+      - g++-4.8
 script:
   - make
   - make -j
