--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ install:
 script:
   - CXX=clang++-3.6 make -j  # travis overwrites my env settings
   - make test
-cache:
-  directories:
-    - vendor/TestU01-1.2.3/dist
+# cache:
+#   directories:
+#     - vendor/TestU01-1.2.3/dist
